--- a/index.html
+++ b/index.html
@@ -168,27 +168,26 @@ function executeSearch(value) {
 	iBox.hide();
 }
 function changeMapType(value) {
-	//0 = Mapnik, 1 = Cycle
+	//0 = Mapnik, 1 = Cycle, 2 = Night
+	//TO-DO: Refresh Map
 	map.setMapType(value);
-	if(value == '1') {
-		document.getElementById("pressed").id = "";
-		document.getElementById("fahrrad").id = "pressed";
+		switch (value) {
+			case "0":
+				document.getElementById("normal").className = "pressed";
+				document.getElementById("fahrrad").className = "unpressed";
+				document.getElementById("nacht").className = "unpressed";
+				break;
+			case "1":
+				document.getElementById("normal").className = "unpressed";
+				document.getElementById("fahrrad").className = "pressed";
+				document.getElementById("nacht").className = "unpressed";
+				break;
+			case "2":
+				document.getElementById("normal").className = "unpressed";
+				document.getElementById("fahrrad").className = "unpressed";
+				document.getElementById("nacht").className = "pressed";
+				break;
 	}
-	/*
-	switch (value) {
-	  case "0":
-	    document.getElementById("0").id = "pressed";
-		document.getElementById("pressed").id = "pressed";
-	    break;
-	  case "1":
-	    document.getElementById("1").id = "pressed";
-	    break;
-	  case "2":
-	     document.getElementById("2").id = "pressed";
-	    break;
-	}
-	
-	*/
 }
 </script>
 <script src="js/functions.js" type="text/javascript"></script>
@@ -208,11 +207,13 @@ function changeMapType(value) {
 		</div>
 		
 
-	<div id="tributton">
-		<div class="links">
-			<a id="pressed" href="jvascript:changeMapType('0');">Klassisch</a><a id="fahrrad" href="javascript:changeMapType('1');">Fahrrad</a><a href="javascript:changeMapType('2');">Nacht</a>
+		<div id="tributton">
+			<div class="links">
+				<a id="normal" class="pressed" href="javascript:changeMapType('0');">Klassisch</a>
+				<a id="fahrrad" class="unpressed" href="javascript:changeMapType('1');">Fahrrad</a>
+				<a id="nacht" class="unpressed" href="javascript:changeMapType('2');">Nacht</a>
+			</div>
 		</div>
-	</div>
 
 	
 	<div id="content">
@@ -222,7 +223,7 @@ function changeMapType(value) {
 	</div>
 	
 
-	<div id="footer">Kartendaten von OpenStreetMap (und) Mitwirkende, CC-BY-SA</div>
+	<div id="footer">iOpenStreetMap - Kartendaten von OpenStreetMap (und) Mitwirkende, CC-BY-SA</div>
 
 </body>
 
